# GlobeTrotter_odoo

./: .gitignore  README.md
backend/: .env.example  .gitignore  main.py  openapi.json  pyproject.toml  seed_activities.py  seed_cities.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: activities.py  admin.py  auth.py  budget.py  cities.py  stops.py  trips.py  users.py
backend/app/models/: __init__.py  activity.py  city.py  stop.py  trip.py  user.py
backend/app/schemas/: __init__.py  activity.py  city.py  stop.py  trip.py  user.py
backend/app/utils/: auth.py
backend/tests/: conftest.py  test_auth.py  test_trips.py  test_users.py  test_workflow.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/search/: page.tsx
frontend/src/app/(dashboard)/trips/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: app-sidebar.tsx  city-card.tsx  date-range-picker.tsx  itinerary-builder.tsx  providers.tsx  trip-card.tsx
frontend/src/components/ui/: sidebar.tsx  tooltip.tsx
frontend/src/context/: activity-context.tsx  auth-context.tsx  city-context.tsx  trip-context.tsx  trips-context.tsx
frontend/src/features/auth/: api.ts
frontend/src/lib/: api.ts
(+8 files in other folders)
