[project]
name = "globetrotter-odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fastapi-mail>=1.6.1",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
